--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
